syntax = "proto3";

package events;

option go_package = "kitchen/internal/events";

import "google/protobuf/timestamp.proto";

message OrderItem {
  int32 id = 1;
  int32 quantity = 2;
}

message ReadyForKitchenEvent {
  int32 order_id = 2;
  repeated OrderItem items = 3;
}

message KitchenAcceptedOrderEvent {
  int32 order_id = 2;
}

message OrderCookedEvent {
  int32 order_id = 2;
  repeated OrderItem items = 3;
}